# csdldpt

./: .gitignore  README.md  leaf_search_app.py  main.py  preprocess_all_images.py  pyproject.toml  requirements.txt
data/features/: all_features.csv  apples_features.csv  blueberry_features.csv  cherry_features.csv  grape_features.csv  pepper-bell_features.csv  potato_features.csv  raspberry_features.csv  soybean_features.csv  strawberry_features.csv  tomato_features.csv
modules/: extract_features.py  preprocess_all_images.py  search_leaves.py
src/: database.py  feature_extraction.py  preprocess.py  preprocessing.py  retrieval.py  search.py  visualization.py
src/leaf_image_database.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
