[project]
name = "csdldpt"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
]
