[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaf_image_database"
version = "1.0.0"
description = "Hệ thống cơ sở dữ liệu và tìm kiếm ảnh lá cây"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
]

[project.scripts]
leaf-db-cli = "main:main"