[project]
name = "leaf_image_database"
version = "1.0.0"
description = "Hệ thống cơ sở dữ liệu lưu trữ và tìm kiếm ảnh lá cây"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
]
